<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="14dp"
    android:layout_marginEnd="14dp">

    <TextView
        android:id="@+id/txt_chart_price"
        style="@style/CoinBitText.Huge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="$40.90"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_chart_up_down"
        style="@style/CoinBitText.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingEnd="4dp"
        android:text="▲"
        android:textColor="@color/colorGain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_chart_price" />


    <TextView
        android:id="@+id/txt_chart_change1"
        style="@style/CoinBitText.BodyTertiary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="-$0.04"
        app:layout_constraintStart_toEndOf="@+id/txt_chart_up_down"
        app:layout_constraintTop_toBottomOf="@id/txt_chart_price" />


    <TextView
        android:id="@+id/txt_chart_change2"
        style="@style/CoinBitText.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="4dp"
        android:text="+8.1%"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/txt_chart_change1"
        app:layout_constraintTop_toBottomOf="@id/txt_chart_price" />

    <com.robinhood.spark.SparkView
        android:id="@+id/spark_view_main"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_chart_change1"
        app:spark_animateChanges="true"
        app:spark_lineColor="@color/colorPrimary"
        app:spark_scrubEnabled="true" />


    <TextView
        android:id="@+id/txt_chart_error"
        style="@style/CoinBitText.Body1Alternate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Error"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/spark_view_main"
        app:layout_constraintEnd_toEndOf="@id/spark_view_main"
        app:layout_constraintStart_toStartOf="@id/spark_view_main"
        app:layout_constraintTop_toTopOf="@id/spark_view_main" />


    <RadioGroup
        android:id="@+id/radio_group_coins_detail"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spark_view_main">

        <RadioButton
            android:id="@+id/radio_12h"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:checked="true"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/period_1h"
            android:textAlignment="center"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_1d"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:checked="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/period_1day"
            android:textAlignment="center"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_1w"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:checked="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/period_1week"
            android:textAlignment="center"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_1m"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:checked="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/period_1month"
            android:textAlignment="center"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_3m"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:checked="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/period_3month"
            android:textAlignment="center"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_1y"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:checked="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/period_1year"
            android:textAlignment="center"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_all"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:checked="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/period_all"
            android:textAlignment="center"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>